// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio demo -- group 1`] = `
.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.jhQTtd .c9 {
  color: #d9d9d9;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2 {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        styleType
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            default
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            button
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            tag
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        value
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            1
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            2
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            3
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c6"
    >
      <div
        class="c7 c8"
      >
        <i
          class="c9 c10 uc-fe-icon icon__circle "
          type="circle"
        />
        1
      </div>
      <div
        class="c7 c8"
      >
        <i
          class="c9 c10 uc-fe-icon icon__circle "
          type="circle"
        />
        2
      </div>
      <div
        class="c7 c8"
      >
        <i
          class="c9 c10 uc-fe-icon icon__circle "
          type="circle"
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-disabled 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c5 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 .c3 {
  color: #d9d9d9;
}

.c0 .c1,
.c0 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2 {
  margin-right: -1px;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        1
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c5"
        disabled=""
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          disabled=""
          type="circle"
        />
        1
      </div>
      <div
        class="c1 c5"
        disabled=""
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          disabled=""
          type="circle"
        />
        2
      </div>
      <div
        class="c1 c5"
        disabled=""
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          disabled=""
          type="circle"
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-options 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.jhQTtd .c3 {
  color: #d9d9d9;
}

.c0 .c1,
.c0 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2 {
  margin-right: -1px;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        option-1
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        option-2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        option-3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        radio-1
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        radio-2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        radio-3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-size 1`] = `
.c3 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c3:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c4 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c4:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c5 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  padding: 0 12px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c5:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c2 {
  min-width: 50px;
  text-align: center;
  border: 1px solid #c3cad9;
  border-radius: 0;
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
}

.c2:hover {
  z-index: 3;
}

.c0 .style__RadioWrap-sc-25j3mq-1,
.c0 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c0 .style__RadioWrap-sc-25j3mq-1:last-child,
.c0 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-right: -1px;
}

.c0 .c1:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c1:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border c3"
        type="button"
      >
        1
      </button>
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border c3"
        type="button"
      >
        2
      </button>
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border c3"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        1
      </button>
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        2
      </button>
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border c5"
        type="button"
      >
        1
      </button>
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border c5"
        type="button"
      >
        2
      </button>
      <button
        class="c1 c2 uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border c5"
        type="button"
      >
        3
      </button>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-styleType 1`] = `
.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c7:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.jhQTtd .c3 {
  color: #d9d9d9;
}

.c6 {
  min-width: 50px;
  text-align: center;
  border: 1px solid #c3cad9;
  border-radius: 0;
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
}

.c6:hover {
  z-index: 3;
}

.c9 {
  padding: 0 8px;
  cursor: pointer;
  border-radius: 2px;
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c0 .c1,
.c0 .c8 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .c8:last-child {
  margin-right: 0;
}

.c0 .c5 {
  margin-right: -1px;
}

.c0 .c5:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .c5:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        1
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c5 c6 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
        type="button"
      >
        1
      </button>
      <button
        class="c5 c6 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
        type="button"
      >
        2
      </button>
      <button
        class="c5 c6 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
        type="button"
      >
        3
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c8 c9"
      >
        1
      </div>
      <div
        class="c8 c9"
      >
        2
      </div>
      <div
        class="c8 c9"
      >
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- group-uncontrolled 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.jhQTtd .c3 {
  color: #d9d9d9;
}

.c5 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c5 .c3 {
  color: #4074e1;
}

.c0 .c1,
.c0 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2 {
  margin-right: -1px;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2:first-child {
  border-radius: 2px 0 0 2px;
}

.c0 .style__RadioButtonWrap-sc-25j3mq-2:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        1
      </div>
      <div
        checked=""
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__cbox-ed "
          type="cbox-ed"
        />
        2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        1
      </div>
      <div
        checked=""
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__cbox-ed "
          type="cbox-ed"
        />
        2
      </div>
      <div
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__circle "
          type="circle"
        />
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio 1`] = `
.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.jhQTtd .c9 {
  color: #d9d9d9;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2 {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        styleType
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            default
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            button
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            tag
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        checked
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c7 c8"
    >
      <i
        class="c9 c10 uc-fe-icon icon__circle "
        type="circle"
      />
      checked
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-checked 1`] = `
.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c1 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.jhQTtd .c2 {
  color: #d9d9d9;
}

.c4 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c4 .c2 {
  color: #4074e1;
}

.bNiXrY .c0,
.bNiXrY .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.bNiXrY .c0:last-child,
.bNiXrY .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c1"
    >
      <i
        class="c2 c3 uc-fe-icon icon__circle "
        type="circle"
      />
      common
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 c4"
    >
      <i
        class="c2 c3 uc-fe-icon icon__cbox-ed "
        type="cbox-ed"
      />
      checked
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-disabled 1`] = `
.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c1 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c4 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 .c2 {
  color: #d9d9d9;
}

.henUiV .c2 {
  color: #4074e1;
}

.bNiXrY .c0,
.bNiXrY .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.bNiXrY .c0:last-child,
.bNiXrY .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c1"
    >
      <i
        class="c2 c3 uc-fe-icon icon__circle "
        type="circle"
      />
      common
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c4"
      disabled=""
    >
      <i
        class="c2 c3 uc-fe-icon icon__circle "
        disabled=""
        type="circle"
      />
      disabled
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-size 1`] = `
.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c4 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.jhQTtd .c2 {
  color: #d9d9d9;
}

.henUiV .c2 {
  color: #4074e1;
}

.c1 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
}

.c5 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
}

.bNiXrY .c0,
.bNiXrY .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.bNiXrY .c0:last-child,
.bNiXrY .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c1"
    >
      <i
        class="c2 c3 uc-fe-icon icon__circle "
        type="circle"
      />
      sm
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c4"
    >
      <i
        class="c2 c3 uc-fe-icon icon__circle "
        type="circle"
      />
      md
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c5"
    >
      <i
        class="c2 c3 uc-fe-icon icon__circle "
        type="circle"
      />
      lg
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-styleType 1`] = `
.c6 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c6:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.c1 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.jhQTtd .c2 {
  color: #d9d9d9;
}

.henUiV .c2 {
  color: #4074e1;
}

.c5 {
  min-width: 50px;
  text-align: center;
  border: 1px solid #c3cad9;
  border-radius: 0;
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
}

.c5:hover {
  z-index: 3;
}

.c8 {
  padding: 0 8px;
  cursor: pointer;
  border-radius: 2px;
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.bNiXrY .c0,
.bNiXrY .c7 {
  margin-right: 8px;
}

.bNiXrY .c0:last-child,
.bNiXrY .c7:last-child {
  margin-right: 0;
}

.bNiXrY .c4 {
  margin-right: -1px;
}

.bNiXrY .c4:first-child {
  border-radius: 2px 0 0 2px;
}

.bNiXrY .c4:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 c1"
    >
      <i
        class="c2 c3 uc-fe-icon icon__circle "
        type="circle"
      />
      default
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      class="c4 c5 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c6"
      type="button"
    >
      button
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c7 c8"
    >
      tag
    </div>
  </div>
</div>
`;

exports[`Radio demo -- radio-uncontrolled 1`] = `
.c3 {
  margin-right: 8px;
  font-size: 14px;
}

.jhQTtd .c2 {
  color: #d9d9d9;
}

.c1 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c1 .c2 {
  color: #4074e1;
}

.bNiXrY .c0,
.bNiXrY .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.bNiXrY .c0:last-child,
.bNiXrY .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 c1"
    >
      <i
        class="c2 c3 uc-fe-icon icon__cbox-ed "
        type="cbox-ed"
      />
      controlled
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0 c1"
    >
      <i
        class="c2 c3 uc-fe-icon icon__cbox-ed "
        type="cbox-ed"
      />
      uncontrolled
    </div>
  </div>
</div>
`;
